--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "save": "^2.3.2"
   }
 }
